# Figuritas-mundial-2026

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-prod.txt  setup.py
assets/fonts/: .gitkeep
config/: __init__.py  color_profiles.py  config.py  typography.py
data/: .gitkeep
docs/: ARCHITECTURE.md  SETUP.md  USAGE.md
input/fotos/: .gitkeep
logs/: .gitkeep
output/pdf/: .gitkeep
output/preview/: .gitkeep
scripts/: benchmark.py  download_fonts.py
src/: __init__.py  cli.py  data_loader.py  figurita_generator.py  image_processor.py  pdf_renderer.py  sheet_builder.py  utils.py
templates/: figurita.html  sheet.html
tests/: conftest.py  test_config.py  test_data_loader.py  test_image_processor.py
